--- a/root/globaltemplate/angular-scripts.tt
+++ b/root/globaltemplate/angular-scripts.tt
@@ -16,6 +16,7 @@
 <script src="<% uri_base %>static/javascripts/angular/vv.ui.urlAttrs.js"></script>
 <script src="<% uri_base %>static/javascripts/angular/vv.ui.reviseSequence.js"></script>
 <script src="<% uri_base %>static/javascripts/angular/vv.ui.facetedSearch.js"></script>
+<script src="<% uri_base %>static/javascripts/angular/vv.ui.primerSearch.js"></script>
 <script src="<% uri_base %>static/javascripts/angular/vv.ui.sampleSearch.js"></script>
 <script src="<% uri_base %>static/javascripts/angular/vv.ui.sequenceSearch.js"></script>
 <script src="<% uri_base %>static/javascripts/angular/vv.ui.sequenceDownloader.js"></script>
