Ask users to contact us for reporting purposes
Continued funding for Viroverse development through the CFAR is in part
dependent on demonstrating that we have users. Since this is open source
software without any kind of licensing barrier, we must ask users to be
proactive about letting us know they're trying Viroverse.

--- a/root/ngtemplate/homepage/index.tt
+++ b/root/ngtemplate/homepage/index.tt
@@ -4,6 +4,14 @@
 -%]
 <div class="row">
     <div class="col-md-12" ng-controller="LocationHash as locationHash">
+        [% IF nag %]
+            <div class="alert alert-info" role="alert">
+                <p>Please help us maintain funding for Viroverse development by
+                <a href="mailto:mullspt+cfar@uw.edu?subject=Viroverse">emailing
+                us</a> and letting us know who you are and what you're using
+                Viroverse for!</p>
+            </div>
+        [% END %]
         <h2>My Active Samples</h2>
         [% IF my_projects.size > 0 %]
             <uib-tabset active="locationHash.value" ng-cloak>
