Block browsers from mutating sample page features
The Sample controller hosts a couple endpoints for mutating
sample-related data and for redirecting into the input controller. Block
non-editors from clicking through to mutation features and present "no
data" cases more politely.

--- a/root/ngtemplate/sample/panels/aliquots.tt
+++ b/root/ngtemplate/sample/panels/aliquots.tt
@@ -33,7 +33,7 @@
     </table>
     [% END %]
 
-    [% IF has_any_aliquots %]
+    [% IF scientist.can_edit && has_any_aliquots %]
     <div class="list-group">
         <a class="list-group-item" href="[% c.uri_for_action('/sample/manage_aliquots', [ sample.id ]) %]">Manage aliquots</a>
     </div>
