Block browsers from freezers and admin index
Editors are allowed on the admin index page because that's where freezer
stuff is linked.

Updates the freezers::search_freezers controller to use chained dispatch
so it can inherent the permission check from its parent's base action,
paths and args are the same though.

--- a/root/globaltemplate/nav.tt
+++ b/root/globaltemplate/nav.tt
@@ -26,7 +26,9 @@
         </p>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="[% c.uri_for_action("/project/index") %]">Projects</a></li>
+          [% IF scientist.can_edit %]
           <li><a href="[% c.uri_for_action("/admin/index") %]">Admin</a></li>
+          [% END %]
           <li><a href="mailto:<% help_email | uri | html %>?body=<% help_body | uri %>">Need help?</a></li>
         </ul>
 
