Fix a couple stray UI references to "patients"
Either missed when doing s/patient/subject/g or an oversight when added
after that change.

--- a/root/static/partials/sample/search/full-page.html
+++ b/root/static/partials/sample/search/full-page.html
@@ -1,7 +1,7 @@
 <div class="row search-bar">
   <div class="col-md-11">
     <freeform-input
-      placeholder="Sample or patient name contains…">
+      placeholder="Sample or subject name contains…">
     </freeform-input>
     <div class="search-toggles">
       <div class="form-group">
