--- a/root/browsetemplate/browse_home.tt
+++ b/root/browsetemplate/browse_home.tt
@@ -29,7 +29,7 @@
 <h3><a class="body-link" href="[%- uri_base -%]sequence">Sequences</a></h3>
     <p>Find and download sequences by id, name, cohort, tissue, scientist, and region</p>
 <h3><a class="body-link" href="[%- uri_base -%]sample">Samples</a></h3>
-    <p>Find samples by id, name, cohort, patient, tissue, project, and scientist</p>
+    <p>Find samples by id, name, cohort, subject, tissue, project, and scientist</p>
 [% IF features.epitopedb %]
 <h3>Epitope Database</h3>
         <p><a class="body-link" href="[%- c.uri_for('/search/epitopedb_search/peptide') -%]" >Search ELISPOT results by gene, peptide or subject</a></p>
