--- a/root/static/partials/sample/search/within-patient.html
+++ b/root/static/partials/sample/search/within-patient.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-sm-7">
           <p>
-            <result-summary noun="sample" population="for this patient"></result-summary>
+            <result-summary noun="sample" population="for this subject"></result-summary>
           </p>
         </div>
         <div class="col-sm-5 pager-col">
