--- a/root/ngtemplate/homepage/index.tt
+++ b/root/ngtemplate/homepage/index.tt
@@ -12,8 +12,8 @@
                 Viroverse for!</p>
             </div>
         [% END %]
-        <h2>My Active Samples</h2>
         [% IF my_projects.size > 0 %]
+        <h2>My assigned samples</h2>
             <uib-tabset active="locationHash.value" ng-cloak>
                 [% FOR project IN my_projects.keys.sort %]
                     <uib-tab index="'[% project %]'" heading="[% project %]">
@@ -55,54 +55,13 @@
                     </uib-tab>
                 [% END %]
             </uib-tabset>
-        [% ELSE %]
-            You are not currently assigned to any active samples.
         [% END %]
-
-        <h2>All Active Projects</h2>
-        [% IF active_projects.size > 0 %]
-            <div class="row project-panels">
-                [% FOR active IN active_projects %]
-                    <div class="col-md-2">
-                        <div class="panel panel-info">
-                            <div class="panel-heading panel-title text-center">
-                                <strong>
-                                    <a href="[% c.uri_for_action('/project/show', [ active.project_id ]) %]"
-                                       title="[% active.name %]">
-                                        [%~ active.name ~%]
-                                    </a>
-                                </strong>
-                            </div>
-                            <table class="table table-condensed">
-                                <tbody>
-                                    <tr>
-                                        <td>Samples</td>
-                                        <td class="text-right"><strong>[% $(active.sample_assignments).count | commafy %]</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Sequences</td>
-                                        <td class="text-right"><strong>[% $(active.sequences).count | commafy %]</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td>DNA</td>
-                                        <td class="text-right"><strong>[% $(active.extractions.dna).count | commafy %]</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td>RNA</td>
-                                        <td class="text-right"><strong>[% $(active.extractions.rna).count | commafy %]</strong></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <% IF loop.count % 6 == 0 %>
-                      <div class="clearfix visible-md-block visible-lg-block"></div>
-                    <% END %>
-                [% END %]
-            </div>
-        [% ELSE %]
-            There are currently no active projects.
+        <h2>Cohorts</h2>
+        <ul class="cohort-list">
+        [% FOREACH cohort IN cohorts %]
+            <li><a href="[% c.uri_for_action("/cohort/show", [cohort.id] ) %]">[% cohort.name %]</a> ([% $(cohort.patient_cohorts).count + 0 %])</li>
         [% END %]
+        </ul>
     </div>
 </div>
 
