--- a/root/static/partials/primer/search/full-page.html
+++ b/root/static/partials/primer/search/full-page.html
@@ -35,22 +35,24 @@
     <table ng-if="search.result.rows.length" class="table table-striped table-condensed">
       <thead>
         <tr>
-          <th>#</th>
           <th>Name</th>
           <th>Orientation</th>
           <th>Organism</th>
           <th>Sequence</th>
           <th>Sequence length</th>
+          <th>Positions</th>
+          <th>Download</th>
         </tr>
       </thead>
       <tbody>
         <tr ng-repeat="primer in search.result.rows track by primer.primer_id">
-          <td>{{ primer.primer_id }}</td>
           <td>{{ primer.name }}</td>
           <td>{{ primer.orientation }}</td>
           <td>{{ primer.organism }}</td>
           <td><kbd>{{ primer.sequence }}</kbd></td>
           <td>{{ primer.sequence.length }} bp</td>
+          <td>{{ primer.positions.join(", ") }}</td>
+          <td><a vv-href="/primer/{{ primer.primer_id }}/fasta">FASTA</a></td>
         </tr>
       </tbody>
     </table>
