--- a/root/static/partials/primer/search/full-page.html
+++ b/root/static/partials/primer/search/full-page.html
@@ -12,6 +12,10 @@
       <div class="facet-col">
         <facet-widget name="orientation"></facet-widget>
       </div>
+
+      <div class="facet-col">
+        <facet-widget name="position"></facet-widget>
+      </div>
     </div>
   </div>
 
@@ -51,7 +55,7 @@
           <td>{{ primer.organism }}</td>
           <td><code class="sequence">{{ primer.sequence }}</code></td>
           <td class="text-right">{{ primer.sequence.length }} bp</td>
-          <td>{{ primer.positions.join(", ") }}</td>
+          <td>{{ primer.positions.join(',') }}</td>
           <td><a vv-href="/primer/{{ primer.primer_id }}/fasta">FASTA</a></td>
         </tr>
       </tbody>
