Don't make the 'Orientation' column take up so much space

--- a/root/static/partials/primer/search/full-page.html
+++ b/root/static/partials/primer/search/full-page.html
@@ -40,7 +40,7 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Orientation</th>
+          <th><abbr title="Orientation">&lrarr;</abbr></th>
           <th>Organism</th>
           <th>Positions</th>
           <th>Regions</th>
