Add creation of numeric assay protocols
Enhances the select_from_virodb macro (which we should use in more
places!).

--- a/root/globaltemplate/macros.tt
+++ b/root/globaltemplate/macros.tt
@@ -19,8 +19,8 @@ style='font-weight:bold'
 
 [%- MACRO select_from_virodb(id, table) BLOCK -%]
 [%- collection = c.model("ViroDB::$table").search_rs({}, {order_by => "name"}).all -%]
-<select class="form-control" name="[% id %]" id="[% id %]">
-<option selected disabled value=""></option>
+<select [% required %] class="form-control" name="[% id %]" id="[% id %]">
+<option selected disabled value="">[% placeholder %]</option>
 [% FOR item IN collection %]
     <option value="[% item.id %]">[% item.name %]</option>
 [% END %]
