--- a/root/ngtemplate/sample/show.tt
+++ b/root/ngtemplate/sample/show.tt
@@ -19,6 +19,9 @@
         <div class="col-md-4 col-sm-6">
             [% INCLUDE 'sample/panels/derivations.tt' %]
         </div>
+        <div class="col-md-4 col-sm-6">
+            [% INCLUDE 'sample/panels/assays.tt' %]
+        </div>
         [% IF features.ice_cultures %]
         <div class="col-md-4 col-sm-6">
             [% INCLUDE 'sample/panels/ice-cultures.tt' %]
