Add gel search page to footer

--- a/root/globaltemplate/footer.tt
+++ b/root/globaltemplate/footer.tt
@@ -9,6 +9,7 @@
           <li><a href="<% c.uri_for_action("/sample/index") %>">Search samples</a></li>
           <li><a href="<% c.uri_for_action("/sequence/index") %>">Search sequences</a></li>
           <li><a href="<% c.uri_for_action("/primer/index") %>">Search primers</a></li>
+          <li><a href="<% c.uri_for_action("/gel/index") %>">Search gels</a></li>
           <li><a href="[% c.uri_for_action("/project/index") %]">Browse projects</a></li>
         </ul>
         [% IF features.epitopedb %]
