--- a/root/inputtemplate/input_home.tt
+++ b/root/inputtemplate/input_home.tt
@@ -14,6 +14,9 @@ data input workflow:
 [% IF features.epitopedb %]
 <h3><a href='[%- uri_base -%]input/epitopedb/peptide'>EpitopeDB</a></h3>
 [% END %]
+[% IF features.pacbio_sequencing %]
+<h3><a href='[%- uri_base -%]pacbio'>PacBio Sequencing</a></h3>
+[% END %]
 
 [% INCLUDE 'body-bottom.tt' %]
 [% INCLUDE 'body-end.tt' %]
